[package]
name = "rust-nats-wrapper"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.11.0" }
serde_json = "1.0.68"
futures = "0.3.16"
log = "0.4"

[dependencies.rust-lib]
git = "https://github.com/RealisNetwork/rust-lib.git"

[dependencies.ratsio]
git = "https://github.com/RealisNetwork/ratsio.git"
