[package]
name = "rust-nats-wrapper"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.11.0" }
async-trait = "0.1.51"
serde_json = "1.0.68"
futures = "0.3.16"
colored = "2.0.0"
log = "0.4"

[dependencies.ratsio]
git = "https://github.com/RealisNetwork/ratsio.git"
